# letters

./: .gitignore  Makefile  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: __init__.py  main.py
backend/handlers/: __init__.py  letters.py
backend/models/: __init__.py  letter.py
backend/repositories/: __init__.py  letters_repository.py
data/nikolai/processed/: authors.json  endings.json  merged_letters.json  merged_letters_threaded.json
data/nikolai/processors/: classify_authors.py  extract_letters.py  make_threads.py  process_json.py
data/nikolai/prod/: alexandra.json  willy.json
data/nikolai/raw/: alexandra_1916.html  alexandra_1916.json  willy_1894.json  willy_1894.txt  willy_1914.html
src/: App.css  App.jsx  index.css
